# Discrete-Diffusion

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
Documentation/: README.md
configs/: mnist_cnn.yaml  voxel_modelnet10.yaml
notebooks/: visualize_voxels.ipynb
scripts/: build_modelnet_subtypes.py  prepare_modelnet_voxels.py  sample_mnist_cnn.sh  sample_voxel_animation.py  train_mnist_cnn.sh  train_voxel_classifier.py
src/ddiff/: __init__.py  sample.py  train.py
src/ddiff/data/: __init__.py  mnist.py  modelnet_voxel.py  registry.py
src/ddiff/diffusion/: __init__.py  categorical.py  schedules.py
src/ddiff/models/: cnn2d.py  registry.py  unet3d.py  voxel_classifier.py
src/ddiff/postprocessing/: __init__.py  voxels.py
src/ddiff/utils/: checkpoints.py  config.py
src/ddiff/visualization/: images.py  voxels.py
tests/: test_sampling_labels.py  test_training_improvements.py  test_voxel_animation.py  test_voxel_postprocessing.py
