[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "discrete-diffusion-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "trimesh",
  "matplotlib",
  "pyyaml",
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ddiff*"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
]
